--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               alt="Ігор Дем'яненко"
               width="270"
             />
-            <h3 class="human">Ігор Дем'яненко</h3>
+            <h3 class="person">Ігор Дем'яненко</h3>
             <p class="type">Product Designer</p>
           </li>
           <li>
@@ -98,7 +98,7 @@
               alt="Ольга Рєпіна"
               width="270"
             />
-            <h3 class="human">Ольга Рєпіна</h3>
+            <h3 class="person">Ольга Рєпіна</h3>
             <p class="type">Frontend Developer</p>
           </li>
           <li>
@@ -107,7 +107,7 @@
               alt="Микола Тарасов"
               width="270"
             />
-            <h3 class="human">Микола Тарасов</h3>
+            <h3 class="person">Микола Тарасов</h3>
             <p class="type">Marketing</p>
           </li>
           <li>
@@ -116,7 +116,7 @@
               alt="Михайло Єрмаков"
               width="270"
             />
-            <h3 class="human">Михайло Єрмаков</h3>
+            <h3 class="person">Михайло Єрмаков</h3>
             <p class="type">UI Designer</p>
           </li>
         </ul>
