all remarks was fixed
unfottunatly whithout <div> validator not appruved

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         >
         <ul class="nav list">
           <li><a href="./index.html" class="nav">Студія</a></li>
-          <li><a href="" class="nav">Портфоліо</a></li>
+          <li><a href="" class="current-page">Портфоліо</a></li>
           <li><a href="" class="nav">Контакти</a></li>
         </ul>
       </nav>
@@ -32,9 +32,9 @@
       </ul>
     </header>
     <main>
-      <!-- buttons section-->
-      <section class="nav-btn">
-        <h1 hidden>h1</h1>
+      <div>
+        <!-- buttons section-->
+
         <ul class="nav-btn list">
           <li>
             <button type="button" class="link">Усі</button>
@@ -52,99 +52,107 @@
             <button type="button" class="link">Маркетинг</button>
           </li>
         </ul>
-      </section>
-      <!-- images section-->
-      <article class="example">
-        <h2 hidden>h2</h2>
+
+        <!-- images section-->
         <ul class="image list">
           <li>
-            <img
-              src="./images/portfolio/progect1.jpg"
-              alt="progect1"
-              width="370"
-            />
-            <h3 class="example">Технокряк</h3>
+            <a href=""
+              ><img
+                src="./images/portfolio/progect1.jpg"
+                alt="progect1"
+                width="370"
+              />
+            </a>
+            <p class="image">Технокряк</p>
             <p class="type">Веб-сайт</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/progect2.jpg"
-              alt="progect2"
-              width="370"
-            />
-            <h3 class="example">Постер New Orlean vs Golden Star</h3>
+            <a href=""
+              ><img
+                src="./images/portfolio/progect2.jpg"
+                alt="progect2"
+                width="370"
+            /></a>
+            <p class="image">Постер New Orlean vs Golden Star</p>
             <p class="type">Дизайн</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/progect3.jpg"
-              alt="progect3"
-              width="370"
-            />
-            <h3 class="example">Ресторан Seafood</h3>
+            <a href=""
+              ><img
+                src="./images/portfolio/progect3.jpg"
+                alt="progect3"
+                width="370"
+            /></a>
+            <p class="image">Ресторан Seafood</p>
             <p class="type">Додаток</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/progect4.jpg"
-              alt="progect4"
-              width="370"
-            />
-            <h3 class="example">Проєкт Prime</h3>
+            <a href=""
+              ><img
+                src="./images/portfolio/progect4.jpg"
+                alt="progect4"
+                width="370"
+            /></a>
+            <p class="image">Проєкт Prime</p>
             <p class="type">Маркетинг</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/progect5.jpg"
-              alt="progect5"
-              width="370"
-            />
-            <h3 class="example">Проєкт Boxes</h3>
+            <a href=""
+              ><img
+                src="./images/portfolio/progect5.jpg"
+                alt="progect5"
+                width="370"
+            /></a>
+            <p class="image">Проєкт Boxes</p>
             <p class="type">Додаток</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/progect6.jpg"
-              alt="progect6"
-              width="370"
-            />
-            <h3 class="example">Inspiration has no Borders</h3>
+            <a href=""
+              ><img
+                src="./images/portfolio/progect6.jpg"
+                alt="progect6"
+                width="370"
+            /></a>
+            <p class="image">Inspiration has no Borders</p>
             <p class="type">Веб-сайт</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/progect7.jpg"
-              alt="progect7"
-              width="370"
-            />
-            <h3 class="example">Видання Limited Edition</h3>
+            <a href=""
+              ><img
+                src="./images/portfolio/progect7.jpg"
+                alt="progect7"
+                width="370"
+            /></a>
+            <p class="image">Видання Limited Edition</p>
             <p class="type">Дизайн</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/progect8.jpg"
-              alt="progect8"
-              width="370"
-            />
-            <h3 class="example">Проєкт LAB</h3>
+            <a href=""
+              ><img
+                src="./images/portfolio/progect8.jpg"
+                alt="progect8"
+                width="370"
+            /></a>
+            <p class="image">Проєкт LAB</p>
             <p class="type">Маркетинг</p>
           </li>
           <li>
-            <img
-              src="./images/portfolio/progect9.jpg"
-              alt="progect9"
-              width="370"
-            />
-            <h3 class="example">Growing Business</h3>
+            <a href=""
+              ><img
+                src="./images/portfolio/progect9.jpg"
+                alt="progect9"
+                width="370"
+            /></a>
+            <p class="image">Growing Business</p>
             <p class="type">Додаток</p>
           </li>
         </ul>
-      </article>
+      </div>
     </main>
 
     <!-- footer section -->
-    <footer>
-      <a href="./index.html" class="logo"
+    <footer class="footer">
+      <a href="./index.html" class="logo-footer"
         ><span style="color: #2196f3">Web</span>Studio</a
       >
       <address>
