--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           ><span style="color: #2196f3">Web</span>Studio</a
         >
         <ul class="nav list">
-          <li><a href="./index.html" class="nav">Студія</a></li>
+          <li><a href="./index.html" class="current-page">Студія</a></li>
           <li><a href="./portfolio.html" class="nav">Портфоліо</a></li>
           <li><a href="" class="nav">Контакти</a></li>
         </ul>
@@ -80,7 +80,7 @@
       </section>
 
       <!-- Наша команда-->
-      <section>
+      <section class="staff">
         <h2 class="all-staff">Наша команда</h2>
         <ul class="staff list">
           <li>
@@ -124,8 +124,8 @@
     </main>
 
     <!-- footer section -->
-    <footer>
-      <a href="./index.html" class="logo"
+    <footer class="footer">
+      <a href="./index.html" class="logo-footer"
         ><span style="color: #2196f3">Web</span>Studio</a
       >
       <address>
