--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
       </ul>
     </header>
     <main>
-      <div>
+      <section class="main-section">
         <!-- buttons section-->
 
         <ul class="nav-btn list">
@@ -62,9 +62,9 @@
                 alt="progect1"
                 width="370"
               />
+              <h3 class="image">Технокряк</h3>
+              <p class="type">Веб-сайт</p>
             </a>
-            <p class="image">Технокряк</p>
-            <p class="type">Веб-сайт</p>
           </li>
           <li>
             <a href=""
@@ -72,9 +72,10 @@
                 src="./images/portfolio/progect2.jpg"
                 alt="progect2"
                 width="370"
-            /></a>
-            <p class="image">Постер New Orlean vs Golden Star</p>
-            <p class="type">Дизайн</p>
+              />
+              <h3 class="image">Постер New Orlean vs Golden Star</h3>
+              <p class="type">Дизайн</p>
+            </a>
           </li>
           <li>
             <a href=""
@@ -82,9 +83,10 @@
                 src="./images/portfolio/progect3.jpg"
                 alt="progect3"
                 width="370"
-            /></a>
-            <p class="image">Ресторан Seafood</p>
-            <p class="type">Додаток</p>
+              />
+              <h3 class="image">Ресторан Seafood</h3>
+              <p class="type">Додаток</p>
+            </a>
           </li>
           <li>
             <a href=""
@@ -92,9 +94,10 @@
                 src="./images/portfolio/progect4.jpg"
                 alt="progect4"
                 width="370"
-            /></a>
-            <p class="image">Проєкт Prime</p>
-            <p class="type">Маркетинг</p>
+              />
+              <h3 class="image">Проєкт Prime</h3>
+              <p class="type">Маркетинг</p>
+            </a>
           </li>
           <li>
             <a href=""
@@ -102,9 +105,10 @@
                 src="./images/portfolio/progect5.jpg"
                 alt="progect5"
                 width="370"
-            /></a>
-            <p class="image">Проєкт Boxes</p>
-            <p class="type">Додаток</p>
+              />
+              <h3 class="image">Проєкт Boxes</h3>
+              <p class="type">Додаток</p>
+            </a>
           </li>
           <li>
             <a href=""
@@ -112,9 +116,10 @@
                 src="./images/portfolio/progect6.jpg"
                 alt="progect6"
                 width="370"
-            /></a>
-            <p class="image">Inspiration has no Borders</p>
-            <p class="type">Веб-сайт</p>
+              />
+              <h3 class="image">Inspiration has no Borders</h3>
+              <p class="type">Веб-сайт</p>
+            </a>
           </li>
           <li>
             <a href=""
@@ -122,9 +127,10 @@
                 src="./images/portfolio/progect7.jpg"
                 alt="progect7"
                 width="370"
-            /></a>
-            <p class="image">Видання Limited Edition</p>
-            <p class="type">Дизайн</p>
+              />
+              <h3 class="image">Видання Limited Edition</h3>
+              <p class="type">Дизайн</p>
+            </a>
           </li>
           <li>
             <a href=""
@@ -132,9 +138,10 @@
                 src="./images/portfolio/progect8.jpg"
                 alt="progect8"
                 width="370"
-            /></a>
-            <p class="image">Проєкт LAB</p>
-            <p class="type">Маркетинг</p>
+              />
+              <h3 class="image">Проєкт LAB</h3>
+              <p class="type">Маркетинг</p>
+            </a>
           </li>
           <li>
             <a href=""
@@ -142,12 +149,13 @@
                 src="./images/portfolio/progect9.jpg"
                 alt="progect9"
                 width="370"
-            /></a>
-            <p class="image">Growing Business</p>
-            <p class="type">Додаток</p>
+              />
+              <h3 class="image">Growing Business</h3>
+              <p class="type">Додаток</p>
+            </a>
           </li>
         </ul>
-      </div>
+      </section>
     </main>
 
     <!-- footer section -->
